@@ -2,12 +2,14 @@ package com.alumni.management.security.CustomUserDetailsService;
 
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
 import com.alumni.management.user.entity.User;
 import com.alumni.management.user.repository.UserRepository;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -28,7 +30,8 @@ public class CustomUserDetailsService
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                List.of()
-        );
+                Collections.singletonList(
+                    new SimpleGrantedAuthority("ROLE_" + user.getRole().getRoleName())
+                ));
     }
 }
